RESOLVED FIXED73543
IndexedDB: Fix WebIDBObjectStore::createIndex() after r101602
https://bugs.webkit.org/show_bug.cgi?id=73543
Summary IndexedDB: Fix WebIDBObjectStore::createIndex() after r101602
Hans Wennborg
Reported 2011-12-01 02:31:16 PST
IndexedDB: Fix WebIDBObjectStore::createIndex() after r101602
Attachments
Patch (1.99 KB, patch)
2011-12-01 02:32 PST, Hans Wennborg
tonyg: review+
Hans Wennborg
Comment 1 2011-12-01 02:32:42 PST
WebKit Review Bot
Comment 2 2011-12-01 02:35:06 PST
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Hans Wennborg
Comment 3 2011-12-01 02:37:21 PST
Note You need to log in before you can comment on or make changes to this bug.