IndexedDB: Fix WebIDBObjectStore::createIndex() after r101602 https://bugs.webkit.org/show_bug.cgi?id=73543

Reviewed by Tony Gentilcore.

r101602 introduces a new signature for createIndex(). Until Chromium
has been updated to override that function, the default implementation
must call the old version.

* public/WebIDBObjectStore.h:
(WebKit::WebIDBObjectStore::createIndex):

Canonical link: https://commits.webkit.org/90115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101643 268f45cc-cd09-0410-ab3c-d52691b4dbfc